Change version to 7.51

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ loom_version=1.12-SNAPSHOT
 fabric_version=0.137.0+1.21.10
 
 # Mod Properties
-mod_version=v7.51pre2-MC1.21.10
+mod_version=v7.51-MC1.21.10
 maven_group=net.wurstclient
 archives_base_name=Wurst-Client
 mod_loader=Fabric
