--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,5 @@ gh_repo_id=Wurst-Imperium/Wurst7
 mcx_repo_id=Wurst-Imperium/Wurst-MCX2
 
 # Dependencies
+sodium_version=mc1.21.10-0.7.2-fabric
+do_mod_compat_test=true
