--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -90,7 +90,12 @@ jobs:
     - name: Run client gametests
       env:
         IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
-      run: xvfb-run --auto-servernum ./gradlew runClientGameTest runClientGameTestWithMods --stacktrace --warning-mode=fail --no-configuration-cache
+      run: xvfb-run --auto-servernum ./gradlew runClientGameTest --stacktrace --warning-mode=fail
+
+    - name: Run client gametests with mods
+      env:
+        IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
+      run: xvfb-run --auto-servernum ./gradlew runClientGameTestWithMods --stacktrace --warning-mode=fail
 
     - name: Upload screenshots
       uses: actions/upload-artifact@v5
