Attempt to fix client gametest username

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ loom {
 	runs {
 		clientWithMods {
 			inherit client
+			programArgs.add("--username=Wurst-Bot")
 		}
 
 		clientGameTestWithMods {
