Try skipping regular gametest to see if manual --username arg still works

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -87,10 +87,10 @@ jobs:
         done
         echo "</details>" >> $GITHUB_STEP_SUMMARY
 
-    - name: Run client gametests
-      env:
-        IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
-      run: xvfb-run --auto-servernum ./gradlew runClientGameTest --stacktrace --warning-mode=fail
+    # - name: Run client gametests
+    #   env:
+    #     IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
+    #   run: xvfb-run --auto-servernum ./gradlew runClientGameTest --stacktrace --warning-mode=fail
 
     - name: Run client gametests with mods
       env:
