Revert "Temporarily use --info instead of --stacktrace"
This reverts commit b9f816f0a1c3ea3c81e83079c9dbeaf569e5ec34.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -90,7 +90,7 @@ jobs:
     - name: Run client gametests
       env:
         IMGUR_CLIENT_ID: ${{ secrets.IMGUR_CLIENT_ID }}
-      run: ./gradlew runClientGameTest --info
+      run: ./gradlew runClientGameTest --stacktrace --warning-mode=fail
 
     - name: Run client gametests with mods
       env:
