--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ org.gradle.configuration-cache=true
 # check these at https://fabricmc.net/develop/ and
 # https://modrinth.com/mod/fabric-api/versions
 minecraft_version=1.21.11
-yarn_mappings=25w46a+build.2
-loader_version=0.18.1
+yarn_mappings=1.21.11+build.2
+loader_version=0.18.2
 loom_version=1.14-SNAPSHOT
 
 # Fabric API
