Update to 26.1-snapshot-1

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,4 +27,4 @@ mcx_repo_id=Wurst-Imperium/Wurst-MCX2
 # Dependencies
 # check at https://modrinth.com/mod/sodium/versions?l=fabric&g=1.21.11
 sodium_version=mc1.21.11-0.8.0-fabric
-do_mod_compat_test=true
+do_mod_compat_test=false
