--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,11 @@ org.gradle.configuration-cache=true
 # https://modrinth.com/mod/fabric-api/versions
 minecraft_version=1.21.11
 yarn_mappings=1.21.11+build.3
-loader_version=0.18.3
+loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
 # Fabric API
-fabric_version=0.140.0+1.21.11
+fabric_api_version=0.140.2+1.21.11
 
 # Mod Properties
 mod_version=v7.51.4-MC1.21.11
