Change version to 7.52pre3

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ loom_version=1.15-SNAPSHOT
 fabric_api_version=0.141.2+1.21.11
 
 # Mod Properties
-mod_version=v7.52-MC1.21.11
+mod_version=v7.52pre3-MC1.21.11
 maven_group=net.wurstclient
 archives_base_name=Wurst-Client
 mod_loader=Fabric
